...
    Column(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background) // Forzamos el color de fondo del tema
            .padding(24.dp)
            .verticalScroll(scrollState)
            .testTag("screen_dueno"),
        verticalArrangement = Arrangement.Center, // Centra el contenido verticalmente
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Image(
            painter = painterResource(id = R.drawable.perrito),
            contentDescription = null,
...
