...
    val todasLasConsultas by viewModel.listaConsultasRoom.collectAsState()
    
    val misMascotas = todasLasMascotas.filter { it.nombreDueno.equals(duenoNombre, ignoreCase = true) }
    val miAgenda = todasLasConsultas.filter { it.duenoNombre.equals(duenoNombre, ignoreCase = true) }

    Scaffold(
        modifier = Modifier.testTag("screen_agenda"),
        topBar = {
            TopAppBar(
                title = { Text("Mi Agenda", fontWeight = FontWeight.Bold) },
                navigationIcon = {
                    IconButton(onClick = onBack) {
                        Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Volver")
...
